--- a/build.gradle
+++ b/build.gradle
@@ -29,16 +29,20 @@ dependencies {
 
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.+"
     testImplementation "org.springframework.boot:spring-boot-starter-security"
-//   testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+
+
+    testImplementation("org.springframework.boot:spring-boot-starter-actuator")
+
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.+")
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.+")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.+")
 }
-jar.enabled=true
+jar.enabled = true
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
