remove permitAllUrl property add permitUrl property

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     allow-bean-definition-overriding: true
 
 authnetication:
-  permitAllUrl:
-    - /actuator/**
-    - /hello
+  permitUrl:
+    ROLE_ADMIN: [/hello]
+
