--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.31'
-    id 'org.springframework.boot' version "2.1.5.RELEASE"
+    id 'org.springframework.boot' version "2.1.6.RELEASE"
     id 'io.spring.dependency-management' version "1.0.7.RELEASE"
-    id 'org.jetbrains.kotlin.kapt' version '1.3.31'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.31'
+    id 'org.jetbrains.kotlin.kapt' version '1.3.41'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.41'
 }
 
 group 'cn.zenliu.spring'
@@ -20,7 +20,7 @@ test {
 }
 
 dependencies {
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.+"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.+"
     compileOnly "org.springframework.boot:spring-boot-starter-security"
     compileOnly 'org.springframework.boot:spring-boot-starter-webflux'
     compileOnly 'org.springframework.boot:spring-boot-starter-web'
@@ -30,7 +30,7 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.+"
     testImplementation "org.springframework.boot:spring-boot-starter-security"
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
-    testImplementation 'org.springframework.boot:spring-boot-starter-web'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 
 
